--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Munish Grover</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -186,7 +186,7 @@
                               <br>
                               Delhi , India
                           </li>
-                          <li><i class="fa fa-phone" aria-hidden="true"></i> 100</li>
+                          <li><i class="fa fa-phone" aria-hidden="true"></i> 12345</li>
                           <li><i class="fa fa-envelope" aria-hidden="true"></i> munishgrover98@gmail.com</li>
                       </ul>
                     </div>
