index file updated

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                  <ul class="nav g">
 
                      <li class="nav-item" >
-                         <a class="nav-link" href="#"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
+                         <a class="nav-link" href="https://www.facebook.com/manish.grover.142"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
                      </li>
                      <li class="nav-item">
-                         <a class="nav-link" href="#"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+                         <a class="nav-link" href="https://www.linkedin.com/in/munish-grover-a88737138/"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
                      </li>
                      <li class="nav-item">
-                         <a class="nav-link" href="#"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                         <a class="nav-link" href="https://github.com/MunishGrover"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
                      </li>
                  </ul>
              </nav>
@@ -98,7 +98,7 @@
                 <div class="row skillSet">
                     <div class="col-lg-8 col-md-6 col-sm-6 col-xs-6  game">
                         <div class="thumbnail">
-                            <img src="https://vignette.wikia.nocookie.net/nightinthewoods/images/8/8a/Official_unity_logo.png/revision/latest?cb=20170919050857">
+                            <img src="https://vignette.wikia.nocookie.net/nightinthewoods/images/8/8a/Official_unity_logo.png/revision/latest?cb=20170919050857" height="90px" width="200px">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 java">
@@ -200,3 +200,4 @@
 
 </body>
 </html>
+
